--- a/style.css
+++ b/style.css
@@ -450,6 +450,8 @@ input[type="checkbox"] {
     content: "";
     display: block;
     position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     background-color: var(--sm-current-accent-color);
@@ -3012,6 +3014,8 @@ span.page-numbers {
       content: "";
       display: block;
       position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
       height: 100%;
       background-color: var(--sm-current-accent-color);
